# Generalized-Gaussians

./: .gitignore  README.md  pyproject.toml
Opacus-PRV/: conftest.py  pyproject.toml  setup.py
Opacus-PRV/benchmarks/: benchmark_layer.py  check_threshold.py  generate_report.py  layers.py  run_benchmarks.py  utils.py
Opacus-PRV/benchmarks/tests/: helpers.py  test_benchmark_layer.py  test_layers.py  test_utils.py
Opacus-PRV/examples/: char-lstm-classification.py  cifar10.py  dcgan.py  imdb.py  mnist.py  mnist_lightning.py  vision_benchmark.py
Opacus-PRV/experiments/: beta_image_classifier.py  cnns.py  dataset_management.py  dp_utils.py  image_classifier.py  image_tutorial.py  local_models.py  q__run_beta_image_classifier.slrm  run_beta_image_classifier.sh  run_beta_image_classifier.slrm  scatternet_cnns.py  v__priority__run_beta_image_classifier.slrm
Opacus-PRV/opacus/: __init__.py  data_loader.py  distributed.py  lightning.py  privacy_engine.py
Opacus-PRV/opacus/accountants/: __init__.py  accountant.py  gdp.py  prv.py  prv_copy.py  rdp.py  test_delete.py  utils.py
Opacus-PRV/opacus/accountants/analysis/: gdp.py  rdp.py
Opacus-PRV/opacus/grad_sample/: __init__.py  conv.py  dp_multihead_attention.py  dp_rnn.py  embedding.py  functorch.py  grad_sample_module.py  group_norm.py  gsm_base.py  instance_norm.py  layer_norm.py  linear.py  utils.py
Opacus-PRV/opacus/layers/: __init__.py  dp_multihead_attention.py  dp_rnn.py  param_rename.py
Opacus-PRV/opacus/optimizers/: __init__.py  adaclipoptimizer.py  ddp_perlayeroptimizer.py  ddpoptimizer.py  optimizer.py  perlayeroptimizer.py
Opacus-PRV/opacus/schedulers/: __init__.py  grad_clip_scheduler.py  noise_scheduler.py
Opacus-PRV/opacus/scripts/: compute_dp_sgd_privacy.py
Opacus-PRV/opacus/tests/: accountants_test.py  batch_memory_manager_test.py  ddp_hook_check.py  distributed_poisson_test.py  dpdataloader_test.py  grad_sample_module_test.py  gradient_accumulation_test.py  module_validator_test.py  multigpu_gradcheck.py  per_sample_gradients_utils_test.py  poisson_test.py  privacy_engine_test.py  privacy_engine_validation_test.py  prv_accountant.py  randomness_test.py  utils.py
Opacus-PRV/opacus/tests/dp_layers/: common.py  dp_multihead_attention_test.py  dp_rnn_test.py
Opacus-PRV/opacus/tests/grad_samples/: common.py  conv1d_test.py  conv2d_test.py  conv3d_test.py  dp_multihead_attention_test.py  dp_rnn_test.py  embedding_bag_test.py  embedding_test.py  instance_norm1d_test.py  instance_norm2d_test.py  instance_norm3d_test.py  layer_norm_test.py  linear_test.py  sequence_bias_test.py
Opacus-PRV/opacus/tests/schedulers/: grad_clip_scheduler_test.py  noise_scheduler_test.py
Opacus-PRV/opacus/utils/: batch_memory_manager.py  module_utils.py  packed_sequences.py  per_sample_gradients_utils.py  tensor_utils.py  uniform_sampler.py
Opacus-PRV/opacus/validators/: __init__.py  batch_norm.py  instance_norm.py  lstm.py  module_validator.py  multihead_attention.py  utils.py
(+27 files in other folders)
