[tool.poetry]
name = "data-aware-dp"
version = "0.3.1"
description = ""
authors = ["Roy Rinberg <royrinberg@gmail.com>"]
readme = "README.md"
packages = [{include = "data_aware_dp"}]


[tool.poetry.dependencies]
python = ">=3.9,<3.10"
matplotlib = "3.5.2"
pandas = "^1.4.3"
seaborn = "^0.11.2"
toolz = "^0.11.2"
tqdm = "^4.64.0"
plotly = "^5.9.0"
numpy = "^1.20.0, <=1.24.0"
numba = "^0.56.0"

torch = "^1.12.1"
torchvision = "^0.13.1"

PyYAML = "^6.0"
scikit-learn = "^1.1.2"
transformers = "^4.31.0"




[tool.poetry.group.dev.dependencies]

black = "^22.6.0"
yapf = "^0.32.0"
jupyter = "^1.0.0"
bpython = "^0.23"

opacus = {path = "Opacus-PRV/", develop = true}

ipywidgets = "^7.0.0"
mpmath = "^1.2.1"
sympy = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
